# Mnist_inference

./: CMakeLists.txt  README.md
inference/: inference.cpp
onnx/: export_onnx.py
training/: export_pth.py
